# tang

./: .cirrus.yml  .gitignore  .packit.yaml  .travis.test  .travis.yml  BSD-MANIFEST  COPYING.openssl  Makefile.am  README.md  configure.ac  http.c  http.h  meson.build  meson_options.txt  nagios.c  tang-nagios.1.md  tang.8  tang.asn1  tang.socket.in  tang.spec  tang@.service.in  tangd-update  tangd-update.path.in  tangd-update.service.in  tangd.c  tangd.socket.in  tangd@.service.in  test-adv.in  test-nagios  test-nagios.in  test-rec.in
.github/workflows/: build.yml  coverage.yml  install-dependencies
doc/: meson.build  tang-nagios.1  tang-nagios.1.adoc  tang-show-keys.1  tang-show-keys.1.adoc  tang-show-keys.1.md  tang.8  tang.8.adoc  tang.8.md  tangd-rotate-keys.1.adoc
src/: Makefile.am  adv.c  asn1.c  asn1.h  blapi.c  bldir.c  clevis.c  clevis.sym  conv.c  conv.h  db.c  db.h  dbdir.c  http.c  http.h  io.c  io.h  keys.c  keys.h  list.c  meson.build  module-setup.sh.in  nagios.c  pkt.c  pkt.h  plugin.c  plugin.h  rec.c  socket.c  socket.h  tang-key-gen.c  tang-key-send.c  tang-keyd.c  tang-luks-askpassd.c  tang-luks-askpassd.path.in  tang-luks-askpassd.service.in  tang-luks-bind.c  tang-luks-list.c  tang-luks-storaged.c  tang-luks-udisks2.c  (+16 more)
src/askpass/: askp.c  iface.c  iface.h  question.c  question.h
src/clevis/: Makefile.am  acquire.c  adv.c  common.c  common.h  provision.c
src/clt/: Makefile.am  adv.c  adv.h  clevis.c  clevis.sym  msg.c  msg.h  nagios.c  rec.c  rec.h  sbuf.c  sbuf.h  skey.c  skey.h
src/clt/luks/: Makefile.am  asn1.c  asn1.h  luks.c  luks.h  meta.c  meta.h  tang-luks-bind.c  tang-luks-list.c  tang-luks-storaged.c  tang-luks-storaged.desktop.in  tang-luks-udisks2.c  tang-luks-unbind.c
src/clt/luks/askp/: Makefile.am  askp.c  askp.h  iface.c  module-setup.sh.in  question.c  question.h  tang-luks-askpassd.c
src/core/: Makefile.am  asn1.c  asn1.h  conv.c  list.h  pkt.h
src/luks/: asn1.c  asn1.h  luks.c  luks.h  meta.c  meta.h
src/progs/: Makefile.am  adv.c  adv.h  db.c  db.h  list.c  list.h  rec.c  rec.h  srv.c  srv.h  tang-gen.c  tang-mod.c  tang-send.c  tang-serve.c
src/srv/: Makefile.am  adv.c  adv.h  db.c  db.h  list.h  rec.c  rec.h  srv.c  srv.h  tang-key-gen.c  tang-key-groups.c  tang-key-mod.c  tang-keyd.c  tang-keyd.service.in  tang-keyd.socket.in
src/tests/: Makefile.am  client.c  keyd.c  send.c  serve.c
tests/: Makefile.am  adv  adv-socat  adv-socat-endpoint  adv-standalone  adv-standalone-endpoint  bench  benchmark.c  bsd-adv  bsd-rec  helpers  keyd.c  meson.build  nagios  rec  rec-socat  rec-socat-endpoint  rec-standalone  rec-standalone-endpoint  test-keys.c.in  test-util.c  test-util.h
tests/keys/: -bWkGaJi0Zdvxaj4DCp28umLcRA.jwk  .r4E2wG1u_YyKUo0N0rIK7jJF5Xg.jwk  .uZ0s8YTXcGcuWduWWBSiR2OjOVg.jwk  qgmqJSo6AEEuVQY7zVlklqdTMqY.jwk
units/: meson.build  tangd-keygen.service.in  tangd-update.path.in  tangd-update.service.in  tangd.conf.in  tangd.rc.in  tangd.socket  tangd.socket.in  tangd.xinetd  tangd@.service.in  tangdx
